feat: refactor main API, improve config module binding, better processor warnings, etc